inserted evaluation data

--- a/search_engine/result_quality.ipynb
+++ b/search_engine/result_quality.ipynb
@@ -119,16 +119,17 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "def ap_at_k(expected ,actual,k=40):\n",
-    "    k_actual = actual[:k]\n",
-    "    dic = {doc_id: 0 for doc_id in expected}\n",
-    "    sum_result, overlap, current_k = 0.0, 0, 0\n",
-    "    for doc_id in k_actual:\n",
-    "        current_k += 1\n",
-    "        if doc_id in dic:\n",
-    "            overlap += 1\n",
-    "            sum_result += precision_at_k(expected, actual, current_k)\n",
-    "    return sum_result / overlap"
+    "def average_precision(true_list, predicted_list, k=40):\n",
+    "    true_set = frozenset(true_list)\n",
+    "    predicted_list = predicted_list[:k]\n",
+    "    precisions = []\n",
+    "    for i,doc_id in enumerate(predicted_list):\n",
+    "        if doc_id in true_set:\n",
+    "            prec = (len(precisions)+1) / (i+1)\n",
+    "            precisions.append(prec)\n",
+    "    if len(precisions) == 0:\n",
+    "        return 0.0\n",
+    "    return round(sum(precisions)/len(precisions),3)"
    ],
    "metadata": {
     "collapsed": false,
@@ -183,6 +184,74 @@
     "                sum_result += precision_at_k(q_expected, actual[i], current_k)\n",
     "        avg_precision.append(sum_result / overlap)\n",
     "    return round(sum(avg_precision) / len(avg_precision), 3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "30\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_p_final = [0.0, 0.1, 0.7804583333333336, 0.0, 0.0, 0.6110000000000001, 0.0, 1.0, 0.4458571428571429, 0.43525, 0.6372727272727272, 0.2665, 0.31655555555555553, 0.43340000000000006, 0.5, 0.5959333333333333, 0.7, 0.0, 0.0, 0.106, 0.27280000000000004, 0.44239999999999996, 0.9910714285714286, 0.9545454545454546, 0.3536428571428571, 0.47354545454545466, 0.062, 0.0, 0.3488, 0.167]\n",
+    "\n",
+    "r_t_final = [3.586242198944092, 4.298160791397095, 1.9424002170562744, 1.2708654403686523, 2.3687193393707275, 1.2777814865112305, 3.861959934234619, 5.775113344192505, 1.8294506072998047, 2.9290122985839844, 1.3088877201080322, 1.646132230758667, 1.284876823425293, 4.300310373306274, 1.6360619068145752, 1.3330750465393066, 2.102991819381714, 1.7847518920898438, 2.911557197570801, 1.3440444469451904, 2.2348995208740234, 1.6885623931884766, 1.3750200271606445, 2.5088603496551514, 4.405431747436523, 1.3886620998382568, 1.329524278640747, 5.274954080581665, 1.2812979221343994, 1.4797084331512451]\n",
+    "\n",
+    "recall_final = [0.0, 0.02, 0.6, 0.0, 0.0, 0.237, 0.0, 0.022, 0.143, 0.121, 0.324, 0.048, 0.231, 0.227, 0.023, 0.326, 0.069, 0.0, 0.0, 0.043, 0.114, 0.106, 0.483, 0.275, 0.519, 0.268, 0.133, 0.0, 0.217, 0.021]\n",
+    "\n",
+    "map_k_final = 0.3664677429052429\n",
+    "\n",
+    "print(len(a_p_final))\n",
+    "print(len(r_t_final))\n",
+    "print(len(recall_final))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "30\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_p_simple = [0.025, 0.0, 0.8302499999999999, 0.0, 0.0, 0.4934545454545454,  0.0, 0.0, 0.077, 1.0, 0.0, 0.0, 0.0, 0.20124999999999998, 0.0,  0.458, 0.0, 0.0, 0.25]\n",
+    "\n",
+    "r_t_simple = [2.697779893875122, 3.8856263160705566, 1.2027359008789062, 0.41219067573547363, 1.637702226638794, 1.4572710990905762,  3.4548470973968506, 5.736194133758545, 1.079308271408081, 0.0, 2.3048038482666016, 1.4279594421386719, 1.940450668334961, 0.41112303733825684, 0.7773911952972412, 0.7773911952972412, 0.3876194953918457, 1.3936762809753418, 0.9041879177093506, 2.245476722717285, 0.7379331588745117]\n",
+    "\n",
+    "recall_simple = [0.022, 0.0, 0.1, 0.0, 0.0, 0.289,  0.0, 0.0, 0.0, 0.03, 0.029, 0.0, 0.0, 0.0, 0.091, 0.0, 0.103, 0.0, 0.0, 0.021]\n",
+    "\n",
+    "map_k_simple = 3.3349545454545453\n",
+    "\n",
+    "print(len(a_p_final))\n",
+    "print(len(r_t_final))\n",
+    "print(len(recall_final))"
    ],
    "metadata": {
     "collapsed": false,
@@ -443,7 +512,7 @@
     "        t = time() - t_start\n",
     "        if res.status_code == 200:\n",
     "            predicted= res.json()\n",
-    "            ap_k = ap_at_k(wiki_ids, predicted)\n",
+    "            ap_k = average_precision(wiki_ids, predicted)\n",
     "            recall_k = recall(wiki_ids, predicted)\n",
     "            print(f\"Retrival time for [{query}] with search -> {t}\")\n",
     "            print(f\"Average precision for [{query}] -> {ap_k}\")\n",
