inserted evaluation data

--- a/search_engine/result_quality.ipynb
+++ b/search_engine/result_quality.ipynb
@@ -194,18 +194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n",
-      "30\n",
-      "30\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "a_p_final = [0.0, 0.1, 0.7804583333333336, 0.0, 0.0, 0.6110000000000001, 0.0, 1.0, 0.4458571428571429, 0.43525, 0.6372727272727272, 0.2665, 0.31655555555555553, 0.43340000000000006, 0.5, 0.5959333333333333, 0.7, 0.0, 0.0, 0.106, 0.27280000000000004, 0.44239999999999996, 0.9910714285714286, 0.9545454545454546, 0.3536428571428571, 0.47354545454545466, 0.062, 0.0, 0.3488, 0.167]\n",
     "\n",
@@ -213,33 +203,20 @@
     "\n",
     "recall_final = [0.0, 0.02, 0.6, 0.0, 0.0, 0.237, 0.0, 0.022, 0.143, 0.121, 0.324, 0.048, 0.231, 0.227, 0.023, 0.326, 0.069, 0.0, 0.0, 0.043, 0.114, 0.106, 0.483, 0.275, 0.519, 0.268, 0.133, 0.0, 0.217, 0.021]\n",
     "\n",
-    "map_k_final = 0.3664677429052429\n",
-    "\n",
-    "print(len(a_p_final))\n",
-    "print(len(r_t_final))\n",
-    "print(len(recall_final))"
+    "map_k_final = 0.3664677429052429"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n",
-      "30\n",
-      "30\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "a_p_simple = [0.025, 0.0, 0.8302499999999999, 0.0, 0.0, 0.4934545454545454,  0.0, 0.0, 0.077, 1.0, 0.0, 0.0, 0.0, 0.20124999999999998, 0.0,  0.458, 0.0, 0.0, 0.25]\n",
     "\n",
@@ -247,16 +224,34 @@
     "\n",
     "recall_simple = [0.022, 0.0, 0.1, 0.0, 0.0, 0.289,  0.0, 0.0, 0.0, 0.03, 0.029, 0.0, 0.0, 0.0, 0.091, 0.0, 0.103, 0.0, 0.0, 0.021]\n",
     "\n",
-    "map_k_simple = 3.3349545454545453\n",
-    "\n",
-    "print(len(a_p_final))\n",
-    "print(len(r_t_final))\n",
-    "print(len(recall_final))"
+    "map_k_simple = 0.16674772727272727"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "a_p_w2v = [ 0.0, 0.0, 0.75, 0.053, 0.0, 0.45514285714285707, 0.0, 0.0, 0.0, 0.333, 0.6372727272727272, 0.0, 0.1, 0.0, 0.0, 0.5959333333333333, 0.333, 0.0, 0.0, 0.125]\n",
+    "\n",
+    "r_t_w2v = [15.376965999603271, 12.022098779678345, 3.5480167865753174, 1.3782930374145508, 10.49408769607544, 1.3862693309783936, 18.124810457229614, 14.635404825210571, 2.968914747238159, 13.35857367515564, 1.3879289627075195, 3.1705217361450195, 1.3789501190185547, 8.449746131896973, 4.762354612350464, 1.4359328746795654, 2.40838360786438, 4.089439868927002, 11.619380712509155, 1.4864802360534668, 0.021]\n",
+    "\n",
+    "recall_w2v = [ 0.0, 0.0, 0.05, 0.067, 0.0, 0.184, 0.0, 0.0, 0.0, 0.03, 0.324, 0.0, 0.026, 0.0, 0.0, 0.326, 0.034, 0.0, 0.0]\n",
+    "\n",
+    "map_k_w2v = 0.1691174458874459"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
